@@ -7,6 +7,13 @@ see the NEWS file.
 
 2006-10-15 Stephen Bennett <spb@gentoo.org>
 
+	* include/s_conf.h, src/newconf.c, modules/m_kline.c: Allow disabling
+	of KLINE foo@bar ON server.name in config, and when enabled send out
+	netwide server notices when it is used. This does not affect clustered
+	K-Lines.
+
+2006-10-15 Stephen Bennett <spb@gentoo.org>
+
 	* include/snomask.h, include/s_newconf.h, src/newconf.c,
 	src/snomask.c, src/s_newconf.c, modules/m_grant.c: Make GRANT work
 	remotely.
